uses db to check if chunk exists. returns 200 if it does exist.
